fix margin regression on mobile testimonials

--- a/app/assets/stylesheets/ecommerce/expatshop/custom.scss
+++ b/app/assets/stylesheets/ecommerce/expatshop/custom.scss
@@ -52,7 +52,7 @@
     padding-left: 0px;
   }
   .testimonial-body {
-    margin: 0 0 0 0;
+    margin: 0 10 0 0 !important;
   }
   .global-products {
     padding: 0 0 20 0;
